adding button up

--- a/week1/index.html
+++ b/week1/index.html
@@ -98,6 +98,9 @@
     </div>
 
 </div>
+    <div class="back-to-top-wrapper">
+        <a href="#top" class="back-to-top-link" aria-label="Scroll to Top">&uArr;</a>
+        </div>    
 <!-- second block skills-->
 <div class="container" id="skills">
     <div class="my-skills">
