Some fixes for footer menu items and button position

--- a/week3/index.html
+++ b/week3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adyen | Die Payment-Plattform, die für Wachstum gebaut ist</title>
+    <title>Adyen | The payments platform built for growth</title>
     <link type="image/ico" rel="shortcut icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
@@ -84,7 +84,7 @@
                                     <li>In-depth data insights</li>
                                     </ul>
                             </div>
-                            <div class="btn-row">
+                            <div class="btn-row btn-row-bench">
                                 <a class="btn default-primary" href="#"> Get in touch </a>
                                 <a class="btn black-tertiary " href="#"> Explore 
                                     <span class="adyen-link-arrow"></span> 
@@ -101,14 +101,14 @@
             </div>
             <!-- second block witch partners logo -->
             <div class="row logo_area">
-                <div class="row inner_container">
+                <div class="inner_container">
                     <ul class="inner_container-logo">
-                        <li><img src="./images/uber-logobar-svg.svg" alt="partner logo"></li>
-                        <li><img src="./images/microsoft-logobar-svg.svg" alt="partner logo"></li>
-                        <li><img src="./images/booking-com-logobar-svg.svg" alt="partner logo"></li>
-                        <li><img src="./images/ebay-logobar.svg" alt="partner logo"></li>
-                        <li><img src="./images/bonobos-svg-logobar.svg" alt="partner logo"></li>
-                        <li><img src="./images/spotify-logobar-svg.svg" alt="partner logo"></li>
+                        <li><img class="partners_image" src="./images/uber-logobar-svg.svg" alt="partner logo"></li>
+                        <li><img class="partners_image" src="./images/microsoft-logobar-svg.svg" alt="partner logo"></li>
+                        <li><img class="partners_image" src="./images/booking-com-logobar-svg.svg" alt="partner logo"></li>
+                        <li><img class="partners_image" src="./images/ebay-logobar.svg" alt="partner logo"></li>
+                        <li><img class="partners_image" src="./images/bonobos-svg-logobar.svg" alt="partner logo"></li>
+                        <li><img class="partners_image" src="./images/spotify-logobar-svg.svg" alt="partner logo"></li>
                     </ul>
                 </div>
             </div>
@@ -171,6 +171,8 @@
                     </div>
                 </div>
             </div>
+            <!-- fourth block -->
+
             <!-- footer -->
             <footer class="row area-dark">
                 <div class="inner_container footer-inner">
