--- a/week3/index.html
+++ b/week3/index.html
@@ -181,7 +181,7 @@
                         <div class="read-more-area-item read-more-area-item--small">
                         <a class="read-more-area-item-link" href="#">
                         <span class="read-more-area-item-image item-image-first" title="People in a retail store">
-                        <img class="read-more-area-item-logo" src="/dam/jcr:9ca71698-0fb8-4313-b3f3-2c3fa041c690/Bonobos-logo-white-svg.svg" alt="Bonobos logo" style="height: 20px;">
+                        <img class="read-more-area-item-logo item-logo-bonobos" src="./images/Bonobos-logo-white-svg.svg" alt="Bonobos logo" >
                         </span>
                         <h3 class="text--dark font-weight-bold">Bonobos case study: The future of retail is personal</h3>
                         <span class="text--dark"><p>Chief Experience Officer Dominique Essig discusses retail trends and the importance of personalization.<br>
@@ -191,9 +191,9 @@
                         </a>
                         </div>
                         <div class="read-more-area-item read-more-area-item--large">
-                        <a class="read-more-area-item-link item-image-second" href="#">
-                        <span class="read-more-area-item-image" style="background-image: url(/dam/jcr:8b4f2a5d-9ec9-438c-9015-8ef9d8b864a0/read-more-spotify-image.jpg);" title="Person playing saxaphone">
-                        <img class="read-more-area-item-logo" src="/dam/jcr:49119955-47bf-4fa8-80de-1357f5540693/spotify-logo-white-svg.svg" alt="Spotify logo" style="height: 24px;">
+                        <a class="read-more-area-item-link " href="#">
+                        <span class="read-more-area-item-image item-image-second" title="Person playing saxaphone">
+                        <img class="read-more-area-item-logo " src="./images/spotify-logo-white-svg.svg" alt="Spotify logo" >
                         </span>
                         <h3 class="text--dark font-weight-bold">5 insights from Andy Wiggan, head of payments, Spotify</h3>
                         <span class="text--dark"><p>We sat down to talk to Andy Wiggan, head of payments and conversion at Spotify, about growth, customer experience, and optimizing payments.<br>
@@ -203,9 +203,9 @@
                         </a>
                         </div>
                         <div class="read-more-area-item read-more-area-item--small">
-                        <a class="read-more-area-item-link item-image-third" href="#">
-                        <span class="read-more-area-item-image" style="background-image: url(/dam/jcr:fece42ea-284d-4cb5-9955-aac85572e5d7/blog-header-bijenkorf.jpg);" title="Person making a payment">
-                        <img class="read-more-area-item-logo" src="/dam/jcr:31148f77-871f-4352-8fa9-0ca4507ad35d/de-bijenkorf-logo-white.svg" alt="de Bijenkorf logo" style="height: 30px;">
+                        <a class="read-more-area-item-link " href="#">
+                        <span class="read-more-area-item-image item-image-third" title="Person making a payment">
+                        <img class="read-more-area-item-logo" src="./images/de-bijenkorf-logo-white.svg" alt="de Bijenkorf logo" >
                         </span>
                         <h3 class="text--dark font-weight-bold">De Bijenkorf: Delighting luxury shoppers with personalization in store</h3>
                         <span class="text--dark"><p>How the Dutch department store uses personalization in store and online to delight luxury shoppers from around the world.<br>
